# Presidio_Week5

./: .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  pyproject.toml
backend/: __init__.py  main.py
backend/api/: __init__.py  agent_builder.py  analytics.py  app_builder.py  llm_explorer.py  mcp.py  observability.py  privacy.py  prompt_lab.py  rag_studio.py  router.py  security.py
backend/config/: __init__.py  settings.py
backend/database/: __init__.py  engine.py  models.py
backend/models/: __init__.py  schemas.py
backend/rag/: __init__.py  chunkers.py  evaluator.py  loaders.py  vectorstore.py
backend/security/: __init__.py  injection_detector.py  jailbreak_detector.py  leakage_detector.py  sanitizer.py
backend/services/: __init__.py  embedding_service.py  llm_service.py  observability_service.py  privacy_service.py  tokenizer_service.py
frontend/: app.py
frontend/.streamlit/: config.toml
frontend/components/: __init__.py  charts.py  ui.py
frontend/pages/: agent_builder.py  analytics_page.py  app_builder.py  dashboard.py  llm_explorer.py  mcp_page.py  privacy_center.py  prompt_lab.py  rag_studio.py  security_center.py  settings_page.py
frontend/styles/: main.css
